--- a/opentelemetry-demo/kubernetes/cart-canary.yaml
+++ b/opentelemetry-demo/kubernetes/cart-canary.yaml
@@ -1,4 +1,18 @@
 apiVersion: networking.istio.io/v1beta1
+kind: DestinationRule
+metadata:
+  name: cart
+spec:
+  host: cart
+  subsets:
+    - name: v1
+      labels:
+        version: v1
+    - name: v2
+      labels:
+        version: v2
+---
+apiVersion: networking.istio.io/v1beta1
 kind: VirtualService
 metadata:
   name: cart
@@ -10,8 +24,8 @@ spec:
         - destination:
             host: cart
             subset: v1
-          weight: 100
+          weight: 50
         - destination:
             host: cart
             subset: v2
-          weight: 0
+          weight: 50
